# data-science-examples

./: .gitignore  Makefile  README.md  dimensionality-reduction-algos.py  pyproject.toml
building-ml-powered-apps/: creating_a_model.py  prototype.py  vectorization.py
building_ml_powered_apps/: Makefile  README.md  creating_a_model.py  second_model.py  third_model.py  vectorization.py  webapp.py
building_ml_powered_apps/tests/: helpers.py  test_data_ingestion.py  test_data_processing.py  test_model.py
complete_data_science_bootcamp/: audiobooks_tf.py  kmeans_clustering.py  movie_recommender_system.py  tensorflow_mnist.py
derivatives-with-python/: 3.8.1-gbm-analysis.py  README.md
derivatives-with-python/part1/: dax_analysis.py  euribor-analysis.py  euro_stoxx_implied_volatilities.py  gbm_analysis.py
derivatives-with-python/part2/: american-options.py  complete-market-models.py
financial-analyst-course-2023/: build-fmcg-model.py  challenge-pt-1.py  p-and-l-from-scratch.py
financial-analyst-course-2023/warmups/: financial-functions.py
financial_analyst_course_2023/: p-and-l-3-statment-model.py  p-and-l-from-scratch.py  practical-accounting-transactions-exercise.py  term_colors.py
financial_analyst_course_2023/warmups/: monthly-mortgage.py
hugging-face-course/: datasets-lib-bigdata.py  datasets-lib.py  main-nlp-masked-language.py  main-nlp-token-classification.py  tokenizers-quick-example.py  transformer-models.py  transformer-usage.py  tuning-models.py
hugging_face_course/: README.md  accelerated_models.py  datasets-github-issues.py  datasets-semantic-search.py  demo-number-one.py  gradio-chat-example.py  gradio-hf-hub-integration.py  gradio-interface-advanced.py  gradio-interface-class.py  gradio-share-demos.py  main-nlp-casual-language.py  main-nlp-masked-language.py  main-nlp-question-answering.py  main-nlp-summarization.py  main-nlp-translation.py  tokenizers-bpe.py  tokenizers-from-scratch.py  tokenizers-uni.py  tokenizers-wp.py
machine_learning_and_deep_learning_bootcamp/: adam.py  boost_iris.py  boost_wine.py  cnn_digits.py  cnn_object_recognition.py  computer_vision_blur.py  computer_vision_edge.py  computer_vision_sharpen.py  dbscan_cluster.py  decision_tree_cancer.py  decision_tree_iris.py  decision_tree_iris_tuning.py  deep_neural_net_multiclass.py  deep_neural_net_smile_detector.py  deep_neural_net_xor.py  deep_q_learning_tic_tac_toe.py  face_recognition.py  gradient_descent.py  gradient_descent_ada_grad.py  hierarchical_clustering.py  hierarchical_clustering_market.py  histogram_of_oriented_gradients.py  histogram_of_oriented_gradients_face_detection.py  k_means_points.py  k_means_text.py  k_nearest_neighbors.py  k_nearest_neighbors_credit.py  lane_detection.py  linear_regression.py  logistic_regression.py  logistic_regression_credit.py  logistic_regression_credit_cross_validation.py  n_armed_bandit.py  naive_bayes_credit.py  naive_bayes_text.py  pca_digits.py  pca_mnist.py  pixel_intensities.py  q_learning_tic_tac_toe.py  random_forest_credit.py  (+15 more)
pycon2020-examples/: README.md  amazon-categories-example.py  bag-of-words.py  other-tech.py  regex-ex.py  stemming-lemmatization.py  stopwords.py  word-vectors.py
python_data_science_december_2022/: 1_netflix_viewing_data_analysis.py  README.md
quantitative_finance_algorithmic_trading/: basics.py  black_scholes_model.py  black_scholes_monte_carlo.py  bond_pricing_vasicek.py  bonds.py  capm.py  geometric_brownian_motion.py  markowitz.py  ornstein_uhlenbeck_process.py  stock_price_monte_carlo.py  value_at_risk.py  value_at_risk_monte_carlo.py  vasicek_model.py  wiener_process.py
scripts/: 3-statement-model-forecast.sh  README.md  bandit_pam_kmedoids_clustering.py  bandit_pam_mnist_medoids.py  kaggle-house-data-comprehensive-exploration.py  ml-deployment-diagram.py  polars-string-manipulations.py  self-attention.py  simple-port-scanner.py  visual-network-tracking.py
tools/: Makefile-help.mk  generate-makefile-help.sh
